--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 <hr>
 
 <div id="app">
-    <h4>Problem 3</h4>
+    <h4>Problem 4</h4>
     <p>
-        The prime factors of 13195 are 5, 7, 13 and 29. <br>
+        A palindromic number reads the same both ways. <br> The largest palindrome made from the product of two 2-digit numbers is 9009 = 91 × 99. <br>
 
-        What is the largest prime factor of the number 600851475143 ?
+        Find the largest palindrome made from the product of two 3-digit numbers.
     </p>
     Answer:    <b> <span id="res"></span>  </b>
 
