--- a/index.html
+++ b/index.html
@@ -12,11 +12,10 @@
 <hr>
 
 <div id="app">
-    <h4>Problem 4</h4>
+    <h4>Problem 5</h4>
     <p>
-        A palindromic number reads the same both ways. <br> The largest palindrome made from the product of two 2-digit numbers is 9009 = 91 × 99. <br>
-
-        Find the largest palindrome made from the product of two 3-digit numbers.
+            2520 is the smallest number that can be divided by each of the numbers from 1 to 10 without any remainder. <br>
+            What is the smallest positive number that is evenly divisible by all of the numbers from 1 to 20?
     </p>
     Answer:    <b> <span id="res"></span>  </b>
 
